# agent-orchestration-system

./: .dockerignore  .env.example  .gitignore  Makefile  PROJECT_IMPLEMENTATION_PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/: api.Dockerfile  sandbox.Dockerfile  ui.Dockerfile  worker.Dockerfile
docs/: architecture.md
scripts/: record_fixtures.py  run_demo.py
src/orchestrator/: config.py  main.py
src/orchestrator/agents/: base.py  reviewer.py  supervisor.py
src/orchestrator/db/: models.py  repo.py  seed_demo_data.py  session.py
src/orchestrator/graph/: builder.py  checkpointing.py  edges.py  runner.py  state.py
src/orchestrator/hitl/: levels.py  notify.py  queue.py  triggers.py
src/orchestrator/llm/: clients.py  mock.py  pricing.py  router.py  (+1 more)
tests/: conftest.py
tests/e2e/: conftest.py  test_decomposition.py  test_escalation_matrix.py  test_failure_recovery.py  test_full_lifecycle.py  test_memory_informs_planning.py  test_reviewer_rework.py  test_specialist_tool_use.py
tests/integration/: conftest.py  test_approval_levels.py  test_live_smoke.py  test_memory_roundtrip.py  test_pause_resume.py  test_replay_fork.py  test_retrieval_informs_planning.py  test_task_happy_path.py  test_trace_tree.py
tests/unit/: test_approval_queue.py  test_config.py  test_consolidation.py  test_cost_calc.py  test_graph_routing.py  test_health.py  test_importance.py  test_mock_llm.py  test_plan_schema.py  test_registry.py  test_span_export.py  test_tools.py  test_triggers.py  test_working_memory.py
ui/: review_app.py  trace_explorer.py
(+76 files in other folders)
