[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestration-system"
version = "0.1.0"
description = "Multi-agent orchestration platform with tool use, memory, and human-in-the-loop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "celery>=5.4",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "chromadb>=1.0",
    "pydantic-settings>=2.4",
    "opentelemetry-sdk>=1.27",
    "streamlit>=1.38",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that call real provider APIs (deselected by default in CI)",
]
